[PL-22547]: Pipeline Service Upgrade